# events-finder

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.yml.example  docker-compose.yml  events_finder_realm.json
scripts/: build_and_start_docker.sh  export_events_finder_realm.sh  pre-push.sh
src/: claims.rs  endpoints.rs  keycloak.rs  lib.rs  main.rs  server_config.rs  server_error.rs
tests/: end_to_end_test.rs
