[package]
name = "events-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-grants = "4.0.3"
awc = "3.3.0"
chrono = "0.4.31"
config = "0.13.4"
derive_more = { version = "1.0.0-beta.6", features = ["display"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
